--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 </body>
 <script>
     var a = 123;
-    for (let i = 0; i < 10; i++) {
-        console.log(i);
-    }
+    console.log(`这是一个最好的时代，
+科技的发展给予了每个人创造价值的可能性；
+这也是一个最充满想象的时代，
+每一位心怀梦想的人，终会奔向星辰大海。
+百度与你们一起仰望星辰大海，携手共筑未来！`);
 </script>
 
 </html>
